V3085 Update generale Sinottici

--- a/Prevu.Synoptics.V3085_Anviplas/D210.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D210.xaml
@@ -8,7 +8,7 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid Height="384" Width="397">
+    <Canvas Height="384" Width="397">
         <Labels:Pipe HorizontalAlignment="Left" Margin="37,98,0,0" VerticalAlignment="Top" Color="Oil" Width="289" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="210-03-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -105,5 +105,5 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-    </Grid>
+    </Canvas>
 </UserControl>
