--- a/Prevu.Synoptics.V3085_Anviplas/D430_2.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/D430_2.xaml
@@ -9,23 +9,19 @@
              xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D430_2" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid Height="388" MinWidth="380" Width="565">
-        <Separation:VSP_DETAILDISTRIBUTORS_SeparationTank_wMotorsAndScrew Margin="10,10,10,10"/>
+    <Canvas Height="359" Width="565">
+        <Separation:VSP_DETAILDISTRIBUTORS_SeparationTank_wMotorsAndScrew Height="323" Canvas.Left="10" Canvas.Top="30" Width="545" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="56,14,0,0" 
-		VerticalAlignment="Top" 
-		ComponentName="430-02-MA1"/>
+		VerticalAlignment="Center" 
+		ComponentName="430-02-MA1" Canvas.Left="81" Canvas.Top="22"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="169,14,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA2"/>
+            VerticalAlignment="Center" 
+            ComponentName="430-02-MA2" Canvas.Left="183" Canvas.Top="22"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="291,14,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA3"/>
+            VerticalAlignment="Center" 
+            ComponentName="430-02-MA3" Canvas.Left="286" Canvas.Top="22"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="404,14,0,0" 
-            VerticalAlignment="Top" 
-            ComponentName="430-02-MA4"/>
-    </Grid>
+            VerticalAlignment="Center" 
+            ComponentName="430-02-MA4" Canvas.Left="389" Canvas.Top="22"/>
+    </Canvas>
 </UserControl>
