--- a/Prevu.Synoptics.V3085_Anviplas/P288.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P288.xaml
@@ -9,17 +9,9 @@
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
              xmlns:Pits="clr-namespace:Prevu.Drawings.Machines.Pits;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P288" mc:Ignorable="d"
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid RenderTransformOrigin="0.5,0.5">
-        <Grid.RenderTransform>
-            <TransformGroup>
-                <ScaleTransform/>
-                <SkewTransform/>
-                <RotateTransform Angle="0"/>
-                <TranslateTransform/>
-            </TransformGroup>
-        </Grid.RenderTransform>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="365,654,0,0" VerticalAlignment="Top" Color="Water" Width="341" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="291-01-MA1">
+             Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="341" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="291-01-MA1" Canvas.Left="395" Canvas.Top="624">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -29,7 +21,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="800,654,0,0" VerticalAlignment="Top" Color="Water" Width="423" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="293-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="423" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="293-01-MA1" Canvas.Left="830" Canvas.Top="624">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -39,7 +31,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="671,460,0,0" VerticalAlignment="Top" Color="Water" Width="260" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="283-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="260" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="283-01-MA1" Canvas.Left="701" Canvas.Top="430">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -49,7 +41,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="789,252,0,0" VerticalAlignment="Top" Width="166" Color="Water" StatusComponent="281-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="166" Color="Water" StatusComponent="281-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" Canvas.Left="819" Canvas.Top="222">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -59,7 +51,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="631,478,0,0" VerticalAlignment="Top" Color="Water" Width="54" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="54" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="661" Canvas.Top="448">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -69,7 +61,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="622,524,0,0" VerticalAlignment="Top" Color="Water" Width="112" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="112" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="288-21-CV1" Canvas.Left="652" Canvas.Top="494">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -79,7 +71,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="586,509,0,0" VerticalAlignment="Top" Color="Water" Width="316" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="316" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="616" Canvas.Top="479">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -89,7 +81,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="557,376,0,0" VerticalAlignment="Top" Color="Water" Width="204" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="204" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="457-01-MA1" Canvas.Left="587" Canvas.Top="346">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
@@ -99,7 +91,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="934,339,0,0" VerticalAlignment="Top" Width="70" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="70" StatusComponent="283-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="964" Canvas.Top="309">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -109,7 +101,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="984,356,0,0" VerticalAlignment="Top" Color="ByProduct" Width="38" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="ByProduct" Width="38" RenderTransformOrigin="0.5,0.5" StatusComponent="283-01-MA1" Canvas.Left="1014" Canvas.Top="326">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -119,8 +111,29 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="798,356,0,0" VerticalAlignment="Top" Width="63" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent=""/>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="582,463,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="46" Width="76">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="63" Color="Water" StatusComponent="283-01-MA1" VisibilityComponent="" Canvas.Left="828" Canvas.Top="326"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="543" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="361" Canvas.Top="140">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Pits:PSP_Collecting_Pit_A HorizontalAlignment="Center" Width="180" Canvas.Left="277" Canvas.Top="334" VerticalAlignment="Top"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="274" StatusComponent="101-01-MA1" Color="Water" Canvas.Left="226" Canvas.Top="275">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:CV_Valve_001 HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="46" Width="76" Canvas.Left="612" Canvas.Top="433">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -130,7 +143,7 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="1017,635,0,0" VerticalAlignment="Top" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water">
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1047" Canvas.Top="605">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -140,10 +153,10 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left" Margin="656,570,0,0" VerticalAlignment="Top" Height="106" Width="208"/>
-        <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="846,330,0,0" VerticalAlignment="Top"/>
-        <Machines:Waste HorizontalAlignment="Left" Margin="982,360,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="506,635,0,0" VerticalAlignment="Top" Height="54" Width="48" RenderTransformOrigin="0.5,0.5" Color="Water">
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Center" VerticalAlignment="Top" Height="106" Width="208" Canvas.Left="686" Canvas.Top="540"/>
+        <Machines:VB_VibratingScreen HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="876" Canvas.Top="300"/>
+        <Machines:Waste HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="44" Canvas.Left="1012" Canvas.Top="330"/>
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="54" Width="48" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="536" Canvas.Top="605">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -153,7 +166,7 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="1147,661,0,0" Stroke="Black" VerticalAlignment="Top" Width="92" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Center" Height="2" Stroke="Black" VerticalAlignment="Top" Width="92" RenderTransformOrigin="0.5,0.5" Canvas.Left="1177" Canvas.Top="631">
             <Rectangle.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -163,7 +176,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Machines:External HorizontalAlignment="Left" Margin="1163,569,0,0" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5">
+        <Machines:External HorizontalAlignment="Center" VerticalAlignment="Top" Height="58" Width="60" RenderTransformOrigin="0.5,0.5" Canvas.Left="1193" Canvas.Top="539">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -173,10 +186,9 @@
                 </TransformGroup>
             </Machines:External.RenderTransform>
         </Machines:External>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="715,598,0,0" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="288-41-LT1" RenderTransformOrigin="0.5,0.5">
+            ComponentName="288-41-LT1" RenderTransformOrigin="0.5,0.5" Canvas.Left="745" Canvas.Top="568">
             <Labels:DeviceLabel.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -186,48 +198,30 @@
                 </TransformGroup>
             </Labels:DeviceLabel.RenderTransform>
         </Labels:DeviceLabel>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="351,627,0,0" 
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="230-21-CV1" 
-            JumpToLabel="230-21-CV1" Direction="Left"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="506,348,0,0" 
+            JumpToLabel="230-21-CV1" Direction="Left" Canvas.Left="381" Canvas.Top="597"/>
+        <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="225-41-LT1" 
-            JumpToLabel="457-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="486,581,0,0" 
+            JumpToLabel="457-01-MA1" Canvas.Left="536" Canvas.Top="318"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="291-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="503,461,0,0" 
+            ComponentName="291-01-MA1" Canvas.Left="516" Canvas.Top="551"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="288-21-CV1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="997,694,0,0" 
+            ComponentName="288-21-CV1" Canvas.Left="533" Canvas.Top="431"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="293-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="850,0,0,0" 
-            VerticalAlignment="Center" 
-            ComponentName="283-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1216,639,0,0" 
+            ComponentName="293-01-MA1" Canvas.Left="1027" Canvas.Top="664"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="293-71-ECS2"/>
-        <Pits:PSP_Collecting_Pit_A HorizontalAlignment="Left" Margin="247,364,0,338" Width="180"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="196,305,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="274" StatusComponent="101-01-MA1" Color="Water">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Machines:WaterPump HorizontalAlignment="Left" Margin="309,428,0,0" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water">
+            ComponentName="283-01-MA1" Canvas.Left="882" Canvas.Top="364"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="293-71-ECS2" Canvas.Left="1246" Canvas.Top="609"/>
+        <Machines:WaterPump HorizontalAlignment="Center" VerticalAlignment="Top" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="339" Canvas.Top="398">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="-1"/>
@@ -237,24 +231,12 @@
                 </TransformGroup>
             </Machines:WaterPump.RenderTransform>
         </Machines:WaterPump>
-        <Labels:DetailsLabel HorizontalAlignment="Left" Margin="277,317,0,0" VerticalAlignment="Top" ComponentName="298-VIEW" DetailsPageName="D298" HideComponentName="True"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="213,436,0,0" 
+        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="298-VIEW" DetailsPageName="D298" HideComponentName="True" Canvas.Left="307" Canvas.Top="287"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="298-01-MA1"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="181,317,0,0" 
+            ComponentName="298-01-MA1" Canvas.Left="243" Canvas.Top="406"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="298-61-LEV"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="331,170,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="543" StatusComponent="101-01-MA1" Color="Water">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-    </Grid>
+            ComponentName="298-61-LEV" Canvas.Left="211" Canvas.Top="287"/>
+    </Canvas>
 </UserControl>
