--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -7,10 +7,10 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              xmlns:FiltroPressa="clr-namespace:Prevu.Drawings.Machines.FiltroPressa;assembly=Prevu.Drawings" 
-             x:Class="Prevu.Synoptics.P464" mc:Ignorable="d" 
+             x:Class="Prevu.Synoptics.P474" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="310" StatusComponent="464-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="791" Canvas.Top="692">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="310" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="791" Canvas.Top="692">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -20,7 +20,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="108" StatusComponent="482-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1135" Canvas.Top="686"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="108" StatusComponent="492-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="1135" Canvas.Top="686"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="66" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1085" Canvas.Top="638">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -31,7 +31,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="464-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="728" Canvas.Top="630">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="132" StatusComponent="474-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="728" Canvas.Top="630">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -41,7 +41,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" StatusComponent="460-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="620" Canvas.Top="249">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="98" StatusComponent="470-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="620" Canvas.Top="249">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,7 +51,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="245" StatusComponent="460-01-MA1" PipeHeight="Medium" Canvas.Left="429" Canvas.Top="205"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="245" StatusComponent="470-01-MA1" PipeHeight="Medium" Canvas.Left="429" Canvas.Top="205"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="407,186,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -63,8 +63,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" Margin="136,93,0,0" VerticalAlignment="Top" Width="170" StatusComponent="430-01-MA1" PipeHeight="Medium" Height="10"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="145,238,0,0" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent=""/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="460-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Top" Width="147" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" Canvas.Left="146" Canvas.Top="238"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="255,205,0,0" VerticalAlignment="Top" Width="71" Color="Water" StatusComponent="470-01-MA1" VisibilityComponent="" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -74,13 +74,13 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="464-23-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="493"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="36" Color="Air" VisibilityComponent="" StatusComponent="464-41-PT1" Canvas.Left="910" Canvas.Top="493"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="464-22-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="421"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="464-41-PT1" Canvas.Left="912" Canvas.Top="421"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="464-21-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="353"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="464-41-PT1" Canvas.Left="912" Canvas.Top="353"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="216" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="464-41-PT1" Canvas.Left="836" Canvas.Top="385">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-23-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="493"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="36" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="910" Canvas.Top="493"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-22-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="421"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="421"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="80" Color="Air" StatusComponent="474-21-CV1" VisibilityComponent="" Canvas.Left="807" Canvas.Top="353"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="34" Color="Air" VisibilityComponent="" StatusComponent="474-41-PT1" Canvas.Left="912" Canvas.Top="353"/>
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="216" Color="Air" VisibilityComponent="" RenderTransformOrigin="0.5,0.5" StatusComponent="474-41-PT1" Canvas.Left="836" Canvas.Top="385">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -100,16 +100,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="104" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="482-21-CV1" Canvas.Left="1094" Canvas.Top="594" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="0.859" ScaleY="1.164"/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
         <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" Margin="278,57,0,0" VerticalAlignment="Top" Height="180" Width="150" RenderTransformOrigin="0.5,0.5">
             <Machines:DCE_DryingCentrifuge.RenderTransform>
                 <TransformGroup>
@@ -120,16 +110,6 @@
                 </TransformGroup>
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5" Height="46" Width="76" Canvas.Left="1002" Canvas.Top="598">
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
         <Blowers:VT_CMM_BlowerAirCompressor VerticalAlignment="Center" Height="54" Canvas.Left="1091" Canvas.Top="670" HorizontalAlignment="Left"/>
         <FiltroPressa:FP_FiltroPressa_w3Screw HorizontalAlignment="Left" Width="372" Height="365" Canvas.Left="540" Canvas.Top="250" VerticalAlignment="Center"/>
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="43" Width="39" Canvas.Left="880" Canvas.Top="474"/>
@@ -137,27 +117,17 @@
         <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="43" Width="39" Canvas.Left="880" Canvas.Top="334"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="943" Canvas.Top="248"/>
         <Ellipse HorizontalAlignment="Left" Height="16" Stroke="#FFBDBDBD" VerticalAlignment="Center" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" Canvas.Left="936" Canvas.Top="272"/>
-        <Rectangle HorizontalAlignment="Center" Height="39" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="1098" Canvas.Top="592">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
-            ComponentName="482-01-MA1" Canvas.Left="1075" Canvas.Top="733"/>
+            ComponentName="492-01-MA1" Canvas.Left="1075" Canvas.Top="733"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            JumpFromLabel="482-01-MA1" 
-            JumpToLabel="510-01-MA1" Canvas.Left="1202" Canvas.Top="663"/>
+            JumpFromLabel="492-01-MA1" 
+            JumpToLabel="520-01-MA1" Canvas.Left="1202" Canvas.Top="663"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="452,78,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="460-01-MA1"/>
+            ComponentName="470-01-MA1"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             Margin="106,62,0,0" 
             VerticalAlignment="Top" 
@@ -169,40 +139,37 @@
             JumpFromLabel="460-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="482-21-CV1" Canvas.Left="995" Canvas.Top="548"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-23-CV1" Canvas.Left="959" Canvas.Top="470"/>
+            ComponentName="474-23-CV1" Canvas.Left="959" Canvas.Top="470"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
 		VerticalAlignment="Center" 
-		ComponentName="464-F-PRESS" Canvas.Left="707" Canvas.Top="233"/>
+		ComponentName="474-F-PRESS" Canvas.Left="707" Canvas.Top="233"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-01-MA1" Canvas.Left="518" Canvas.Top="329"/>
+            ComponentName="474-01-MA1" Canvas.Left="518" Canvas.Top="329"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-02-MA1" Canvas.Left="518" Canvas.Top="398"/>
+            ComponentName="474-02-MA1" Canvas.Left="518" Canvas.Top="398"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-03-MA1" Canvas.Left="518" Canvas.Top="470"/>
+            ComponentName="474-03-MA1" Canvas.Left="518" Canvas.Top="470"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-04-MA1" Canvas.Left="650" Canvas.Top="547"/>
+            ComponentName="474-04-MA1" Canvas.Left="650" Canvas.Top="547"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-22-CV1" Canvas.Left="959" Canvas.Top="398"/>
+            ComponentName="474-22-CV1" Canvas.Left="959" Canvas.Top="398"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-21-CV1" Canvas.Left="959" Canvas.Top="329"/>
+            ComponentName="474-21-CV1" Canvas.Left="959" Canvas.Top="329"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="464-41-PT1" Canvas.Left="901" Canvas.Top="199"/>
+            ComponentName="474-41-PT1" Canvas.Left="901" Canvas.Top="199"/>
         <Labels:DeviceLabel 
-            ComponentName="460-61-LEV" Canvas.Left="396" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            ComponentName="470-61-LEV" Canvas.Left="396" Canvas.Top="225" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
-            JumpFromLabel="482-01-MA1" 
-            JumpToLabel="492-01-MA1" Canvas.Left="1186" Canvas.Top="568" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DetailsLabel ComponentName="460-VIEW" DetailsPageName="D460" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="491" Canvas.Top="225" VerticalAlignment="Top"/>
+            JumpFromLabel="492-01-MA1" 
+            JumpToLabel="482-01-MA1" Canvas.Left="965" Canvas.Top="586" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="470-VIEW" DetailsPageName="D470" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="491" Canvas.Top="225" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
