--- a/Prevu.Synoptics.V3085_Anviplas/PlantView.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/PlantView.xaml
@@ -10,8 +10,220 @@
              lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
-             d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
-    <Grid>
-            
-    </Grid>
+             d:Height="950" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
+    <Canvas Height="950" Width="1700">
+        <Labels:Pipe Width="323" RenderTransformOrigin="0.5,0.5" StatusComponent="024-01-MA1" Canvas.Left="229" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="453-01-MA1" Canvas.Left="795" Canvas.Top="378" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="431-01-MA1" Canvas.Left="837" Canvas.Top="378" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="30" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="992" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="510" Canvas.Top="378" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="236-01-MA1" Canvas.Left="552" Canvas.Top="378" Color="Water" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="287" RenderTransformOrigin="0.5,0.5" StatusComponent="233-01-MA1" Canvas.Left="590" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="84" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="925" Canvas.Top="395" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="30" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="912" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="56" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="939" Canvas.Top="367" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="99" RenderTransformOrigin="0.5,0.5" StatusComponent="430-01-MA1" Canvas.Left="870" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right"/>
+        <Labels:Pipe Width="410" RenderTransformOrigin="0.5,0.5" StatusComponent="482-01-MA1" Canvas.Left="722" Canvas.Top="655" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="86" RenderTransformOrigin="0.5,0.5" StatusComponent="492-01-MA1" Canvas.Left="964" Canvas.Top="492" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="482-01-MA1" Canvas.Left="925" Canvas.Top="867" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="311" RenderTransformOrigin="0.5,0.5" StatusComponent="492-01-MA1" Canvas.Left="1005" Canvas.Top="533" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="337" RenderTransformOrigin="0.5,0.5" StatusComponent="492-01-MA1" Canvas.Left="1146" Canvas.Top="690" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Right">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="71" RenderTransformOrigin="0.5,0.5" StatusComponent="492-01-MA1" Canvas.Left="1313" Canvas.Top="867" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="178" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" Canvas.Left="1030" Canvas.Top="868" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="324" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" Canvas.Left="1044" Canvas.Top="698" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="176" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" Canvas.Left="1118" Canvas.Top="436" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="178" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" Canvas.Left="1408" Canvas.Top="868" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="538" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" Canvas.Left="1315" Canvas.Top="591" HorizontalAlignment="Left" VerticalAlignment="Center" Icon="Left">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="131" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" Canvas.Left="1077" Canvas.Top="349" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Width="509" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" Canvas.Left="1077" Canvas.Top="334" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="0"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Canvas x:Name="L1_Q11" Height="400" Width="250" Canvas.Left="115" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="400"  Width="250" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="57"/>
+            <Labels:GroupLabel HorizontalAlignment="Center" VerticalAlignment="Top" GroupName="020" Canvas.Left="92" Canvas.Top="280" />
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="Q11" Canvas.Left="80" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="S110" Canvas.Left="80" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Feeding Area" Canvas.Left="51" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q41" Height="470" Width="297" Canvas.Left="415" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="470"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q41" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S410" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Grinder Area" Canvas.Left="74" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="230" Canvas.Left="119" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="282" Canvas.Left="119" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q61" Height="473" Width="366" Canvas.Left="769" Canvas.Top="31" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="473"  Width="363" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="114"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q61" Canvas.Left="136" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="S610" Canvas.Left="136" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Washing Area" Canvas.Left="103" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="430" Canvas.Left="50" Canvas.Top="280" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="464" Canvas.Left="126" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="474" Canvas.Left="206" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="570" Canvas.Left="259" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+            <Labels:GroupLabel GroupName="450" Canvas.Left="50" Canvas.Top="383" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q71" Height="364" Width="296" Canvas.Left="864" Canvas.Top="558" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="364"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q71" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="S710" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Drying Area 1" Canvas.Left="76" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="510" Canvas.Left="116" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+        <Canvas x:Name="L1_Q72" Height="364" Width="296" Canvas.Left="1250" Canvas.Top="558" HorizontalAlignment="Left" VerticalAlignment="Center">
+            <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="6" StrokeDashArray="2 2" Height="364"  Width="297" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" VerticalAlignment="Center" Height="149" Width="136" Canvas.Top="60" Canvas.Left="80"/>
+            <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="Q72" Canvas.Left="104" Canvas.Top="148"/>
+            <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Center" ComponentName="S720" Canvas.Left="104" Canvas.Top="220"/>
+            <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="24" Foreground="White" FontWeight="Bold" Text="Drying Area 2" Canvas.Left="76" Canvas.Top="19" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+            <Labels:GroupLabel GroupName="520" Canvas.Left="116" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </Canvas>
+    </Canvas>
 </UserControl>
